# vutils-shell

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  deploy.yml
src/vutils/shell/: __init__.py  __init__.pyi  version.py
tests/unit/: __init__.py  test_version.py
