#
# File:    ./pyproject.toml
# Author:  Jiří Kučera <sanczes AT gmail.com>
# Date:    2024-06-02 11:30:20 +0200
# Project: vutils-shell: Shell utilities
# Brief:   Project configuration
#
# SPDX-License-Identifier: MIT
#

[build-system]
requires = ["setuptools >=40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.pylint.main]
ignore-patterns = ["^\\.#", "^.*\\.pyi"]

[tool.pylint.design]
min-public-methods = 0

[tool.pylint.format]
max-line-length = 79

[tool.pylint."messages control"]
enable = ["useless-suppression"]
# `mypy` does the better job
disable = ["no-member"]

[tool.pylint.similarities]
ignore-imports = true
